# livrariavictor

./: .pdm.toml  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor.py  0003_compra.py  0004_alter_autor_options.py  0004_itenscompra.py  0005_livro.py  0006_livro_autores.py  0007_alter_autor_options_alter_autor_email.py
livraria/models/: livro.py
livraria/serializers/: livro.py
livraria/views/: livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
